<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>com.pww</groupId>
  <artifactId>jmeter-amqp-sampler</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <name>JMeter AMQP Sampler (Publish)</name>
  <description>JMeter Java sampler for AMQP publish throughput testing</description>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- JMeter version you're running locally -->
    <jmeter.version>5.6.3</jmeter.version>

    <!-- RabbitMQ Java client implements AMQP 0-9-1 -->
    <amqp.client.version>5.22.0</amqp.client.version>
  </properties>

  <dependencies>
    <!-- Compile against JMeter Java sampler APIs, but do NOT bundle them -->
    <dependency>
      <groupId>org.apache.jmeter</groupId>
      <artifactId>ApacheJMeter_java</artifactId>
      <version>${jmeter.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.jmeter</groupId>
      <artifactId>ApacheJMeter_core</artifactId>
      <version>${jmeter.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- AMQP client library (RabbitMQ) -->
    <dependency>
      <groupId>com.rabbitmq</groupId>
      <artifactId>amqp-client</artifactId>
      <version>${amqp.client.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- Build a single "fat jar" so JMeter only needs one file -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.6.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <createDependencyReducedPom>false</createDependencyReducedPom>

              <!-- Avoid bundling JMeter's own jars -->
              <artifactSet>
                <excludes>
                  <exclude>org.apache.jmeter:*</exclude>
                  <exclude>org.apache.logging.log4j:*</exclude>
                  <exclude>org.slf4j:*</exclude>
                </excludes>
              </artifactSet>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>